Bug 827203: add locks against calling RemoveListener on a Destroy()ed MediaStream r=roc